[package]
name = "envious-tui"
version = "0.1.0"
authors = ["Revanth Pothukuchi <revanthpothukuchi123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
tui = "0.14.0"
unicode-width = "0.1.8"
envyc = { path = "../envyc" }