[package]
name = "envious-tui"
version = "0.1.0"
authors = ["Revanth Pothukuchi <revanthpothukuchi123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
tui = { version = "0.14.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.8"
envyc = { path = "../envyc" }