[package]
name = "envious"
version = "0.1.0"
authors = ["Revanth Pothukuchi <revanthpothukuchi123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.0"
codespan-reporting = "0.11.0"
annotate-snippets = { version = "0.9.0", features = ["color"] }
ansi_term = "0.12.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }